# Balancing_Robot

./: .gitignore
Code for STM32/Master/: .cproject  .mxproject  .project  CMakeLists.txt  STM32H750VBTX.ioc  STM32H750VBTX.launch  arm-none-eabi.cmake  testH7.ioc
Code for STM32/Master/Core/Inc/: ESP32.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Code for STM32/Master/Core/Src/: CAN.c  ESP32.c  HWT906.c  RS485.c  SIN_COS.c  SMC.c  TIMER.c  UART.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c
Code for STM32/Master/Debug/: STM32H750VBTX.elf  STM32H750VBTX.list  STM32H750VBTX.map  makefile  objects.list
Code for STM32/Master/Debug/Core/Src/: CAN.cyclo  CAN.d  CAN.su  ESP32.cyclo  ESP32.d  ESP32.su  HWT906.cyclo  HWT906.d  (+29 more)
Code for STM32/Master/MDK-ARM/: CommunicationCANhehe.c  Controler.c  ESP32.c  FILTER.c  HSMC.c  HSMC_control.c  HWT901.c  HWT906.c  JLinkLog.txt  PID.c  QEI.c  RS485.c  SIN_COS.c  SMC.c  STM32H750VBTX.uvprojx  Tmer.c  UART.c  control.c  startup_stm32h750xx.lst  testH7.uvguix.Admin  testH7.uvoptx  testH7.uvprojx
Code for STM32/Master/MDK-ARM/testH7/: communicationcanhehe.crf  communicationcanhehe.d  control.crf  control.d  esp32.crf  esp32.d  filter.crf  filter.d  hsmc.crf  hsmc.d  hsmc_control.crf  hsmc_control.d  hwt901.crf  hwt901.d  hwt906.crf  hwt906.d  main.crf  main.d  pid.crf  pid.d  qei.crf  qei.d  rs485.crf  rs485.d  sin_cos.crf  sin_cos.d  smc.crf  smc.d  startup_stm32h750xx.d  stm32h7xx_hal.crf  stm32h7xx_hal.d  stm32h7xx_hal_cortex.crf  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.crf  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.crf  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_exti.crf  stm32h7xx_hal_exti.d  stm32h7xx_hal_fdcan.crf  (+48 more)
(+296 files in other folders)
